[tool.poetry]
name = "openai-training"
version = "0.1.0"
description = ""
authors = ["aaron.hudson <aaron.hudson@atlasdsr.com>"]
readme = "README.md"
packages = [{include = "openai_training"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
